feat: add needed packages for fonts and auth

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
   sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
   flutter:
     sdk: flutter
+  google_fonts: ^5.1.0
   stacked: ^3.4.0
   stacked_services: ^1.1.0
 
