--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   firebase_core: ^2.14.0
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.2
   google_fonts: ^5.1.0
+  logger: ^1.4.0
   stacked: ^3.4.0
   stacked_services: ^1.1.0
 
