--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,6 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-lib/firebase_options.dart
-android/app/google-services.json
-ios/firebase_app_id_file.json
+/lib/firebase_options.dart
+/android/app/google-services.json
+/ios/firebase_app_id_file.json
