chore: add flutter secure storage for local database

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_core: ^2.14.0
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^8.0.0
   fluttertoast: ^8.2.2
   google_fonts: ^5.1.0
   logger: ^1.4.0
