--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,13 @@ dependencies:
   cloud_firestore: ^4.8.2
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
+  firebase_storage: ^11.2.5
   flutter:
     sdk: flutter
   flutter_secure_storage: ^8.0.0
   fluttertoast: ^8.2.2
   google_fonts: ^5.1.0
+  image_picker: ^1.0.1
   logger: ^1.4.0
   stacked: ^3.4.0
   stacked_services: ^1.1.0
