--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,5 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-lib/firebase_options.dart
-android/app/google-services.json
-ios/firebase_app_id_file.json
+/android/app/google-services.json
+**/ios/firebase_app_id_file.json
