--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   logger: ^1.4.0
   stacked: ^3.4.0
   stacked_services: ^1.1.0
+  shimmer_animation: ^2.1.0+1
 
 dev_dependencies:
   build_runner: ^2.4.5
