--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,13 @@ environment:
   sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
-  animated_bottom_navigation_bar: ^1.2.0
-  cloud_firestore: ^4.8.2
-  firebase_auth: ^4.6.3
-  firebase_core: ^2.14.0
-  firebase_storage: ^11.2.5
+  cloud_firestore: ^4.13.2
+  firebase_auth: ^4.14.1
+  firebase_core: ^2.23.0
+  firebase_storage: ^11.5.2
   flutter:
     sdk: flutter
-  flutter_secure_storage: ^8.0.0
+  flutter_secure_storage: ^9.0.0
   fluttertoast: ^8.2.2
   google_fonts: ^5.1.0
   image_picker: ^1.0.1
@@ -22,6 +21,9 @@ dependencies:
   stacked: ^3.4.0
   stacked_services: ^1.1.0
   shimmer_animation: ^2.1.0+1
+  flutter_onboarding_slider: ^1.0.11
+  flashy_tab_bar2: ^0.0.6
+  firebase_app_check: ^0.2.1+5
 
 dev_dependencies:
   build_runner: ^2.4.5
@@ -33,4 +35,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  assets:
+    #- assets/images/
+    - assets/svgs/
+    - assets/images/
