--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,5 @@ app.*.map.json
 /android/app/release
 
 /android/app/google-services.json
-**/ios/firebase_app_id_file.json
+/ios/firebase_app_id_file.json
+/lib/firebase_options.dart
