--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flashy_tab_bar2: ^0.0.6
   firebase_app_check: ^0.2.1+5
   intl: ^0.19.0
+  form_validator: ^2.1.1
 
 dev_dependencies:
   build_runner: ^2.4.5
@@ -33,6 +34,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   mockito: ^5.4.1
   stacked_generator: ^1.3.3
+  flutter_launcher_icons: "^0.13.1"
 
 flutter:
   uses-material-design: true
