--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.19.0
   form_validator: ^2.1.1
 
+  stacked_shared: any
 dev_dependencies:
   build_runner: ^2.4.5
   flutter_test:
