--- a/.github/workflows/flutter-workflow.yaml
+++ b/.github/workflows/flutter-workflow.yaml
@@ -28,22 +28,23 @@ jobs:
           # flutter-version: '3.16.8'
           # ^ If you want to use a specific version of Flutter
 
-      - name: Create google service json file
-        run: cat android/app/google-services.json | base64
+      #      - name: Create google service json file
+      #        run: cat android/app/google-services.json | base64
 
-      - name: 'Copy file content'
+      - name: 'create google service file'
         env:
           DATA: ${{ secrets.GOOGLE_SERVICES_JSON }}
-        run: echo $DATA > android/app/google-services.json
+        run: echo $DATA > /home/runner/work/soro_soke/soro_soke/android/app/google-services.json
 
 
-      - name: Create google service json file
-        run: cat lib/firebase_options.dart | base64
+      #      - name: Create google service json file
+      #        run: cat lib/firebase_options.dart | base64
 
-      - name: 'Copy file content'
+      - name: 'create firebase option file'
         env:
           DATA: ${{ secrets.FIREBASE_OPTION }}
-        run: echo $DATA > lib/firebase_options.dart
+        run: echo $DATA > /home/runner/work/soro_soke/soro_soke/lib/firebase_options.dart
+
 
       # Fetches project dependencies from pub
       - name: Install dependencies
