--- a/.github/workflows/flutter-workflow.yaml
+++ b/.github/workflows/flutter-workflow.yaml
@@ -6,7 +6,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  flutter_job:
+  flutter_android_job:
     # The machine, we can also use windows-latest or macos-latest
     runs-on: ubuntu-latest
 
@@ -91,21 +91,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v2.0.1 #${{ steps.next_version.outputs.next_version }}
-          release_name: Release v2.0.1 #${{ steps.next_version.outputs.next_version }}
+          tag_name: v2.0.2 #${{ steps.next_version.outputs.next_version }}
+          release_name: Release v2.0.2 #${{ steps.next_version.outputs.next_version }}
           draft: false
           prerelease: false
 
-      - name: Upload ARMv7 APK
-        id: upload-armv7-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
-          asset_name: app-armeabi-v7a-release.apk
-          asset_content_type: application/vnd.android.package-archive
+#      - name: Upload ARMv7 APK
+#        id: upload-armv7-release-asset
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
+#          asset_name: app-armeabi-v7a-release.apk
+#          asset_content_type: application/vnd.android.package-archive
 
       - name: Upload ARM64 APK
         id: upload-arm64-release-asset
@@ -118,13 +118,70 @@ jobs:
           asset_name: app-arm64-v8a-release.apk
           asset_content_type: application/vnd.android.package-archive
 
-      - name: Upload x86_64 APK
-        id: upload-x86_64-release-asset
+#      - name: Upload x86_64 APK
+#        id: upload-x86_64-release-asset
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: build/app/outputs/flutter-apk/app-x86_64-release.apk
+#          asset_name: app-x86_64-release.apk
+#          asset_content_type: application/vnd.android.package-archive
+
+  flutter_ios_job:
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+
+      - name: Install CocoaPods
+        run: sudo gem install cocoapods
+
+      - name: 'create .env file'
+        env:
+          DATA: ${{ secrets.ENV_VARS }}
+        run: echo $DATA > /Users/runner/work/soro_soke/soro_soke/.env
+
+      - name: 'create GoogleService-Info.plist'
+        env:
+          DATA: ${{ secrets.GOOGLE_SERVICES_INFO_JSON }}
+        run: echo $DATA > /Users/runner/work/soro_soke/soro_soke/ios/Runner/GoogleService-Info.plist
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Build iOS
+        run: flutter build ios --no-codesign
+
+      - name: Upload iOS artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-ipa
+          path: build/ios/ipa
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v2.0.2
+          release_name: Release v2.0.2
+          draft: false
+          prerelease: false
+
+      - name: Upload iOS IPA to Release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/app/outputs/flutter-apk/app-x86_64-release.apk
-          asset_name: app-x86_64-release.apk
-          asset_content_type: application/vnd.android.package-archive
+          asset_path: build/ios/ipa/Runner.ipa
+          asset_name: Runner.ipa
+          asset_content_type: application/octet-stream
